--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,38 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fitness For U</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/../Fitness-For-U/">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/views/profilepage.handlebars">Profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/views/loginpage.handlebars">Login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
-
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  <h1 class="dummyTest">Color and Position of header H1</h1>
 </body>
-
 </html>
