--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,26 @@
-.dummyTest {
+body {
     background-color: black;
+}
+
+header {
     text-align: center;
     color: aqua;
+    background: #999;
+
+}
+
+nav {
+    text-align: right;
+    margin-bottom: 50px;
+    margin-top: -150px;
+}
+
+footer {
+    color: aqua;
+    text-align: center;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    background: #999;
 }
