--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/views/homepage.handlebars">Profile</a> |
+        <a href="/homepage">Profile</a> |
         <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login Or Sign-up Now!</a>
