--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,25 @@
-body {
-    background-color: black;
-}
-
-header {
-    text-align: center;
-    color: aqua;
-    background: #999;
-
-}
-
-nav {
-    text-align: right;
-    margin-bottom: 50px;
-    margin-top: -150px;
-}
-
-footer {
-    color: aqua;
-    text-align: center;
-    position: fixed;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    background: #999;
-}
+header, .project:not(:last-child) {
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .no-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    color: #1b89bc;
+    text-decoration: none;
+    font-size: 100%;
+  }
+  
+  .no-button:hover {
+    color: #065b83;
+    text-decoration: underline;
+  }
+  
+  .dollar-amount {
+    color: #056605;
+    font-weight: bold;
+    margin-left: -5px;
+  }
+  
