--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <div>
         {{#each exercises}}
         <p>{{exercise_category}}</p>
-        
+        <img src="{{href_icon}}" alt="placeholder test">
         {{/each}}
     </div>
 </div>
