--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -13,16 +13,31 @@
   </div>
 {{/each}}
 
-<form class="workout-add-form">
-  <div class="form-group">
-    <label for="name">Name:</label>
-    <input type="text" id="workout-name" name="name" required>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card mt-4">
+        <div class="card-header bg-primary text-white">
+          <h5 class="card-title">Add New Workout</h5>
+        </div>
+        <div class="card-body">
+          <form class="workout-add-form">
+            <div class="form-group center-label">
+              <label for="workout-name">Name:</label>
+              <input type="text" class="form-control" id="workout-name" name="name" required>
+            </div>
+            <div class="form-group">
+              <label for="workout-desc">Description:</label>
+              <textarea class="form-control limited-textarea" id="workout-desc" name="description" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Add Workout</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="description">Description:</label>
-    <textarea id="workout-desc" name="description" rows="4" required></textarea>
-  </div>
-  <button type="submit">Add Workout</button>
-</form>
+</div>
+
+
 
 <script src="/js/exercise.js"></script>
