--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -8,7 +8,7 @@
     <div class="card-body">
       <p>{{description}}</p>
       <p>Date Created: {{format_date date_created}}</p>
-      <p>Created by: </p>
+      <p>Created by:{{../name}} </p>
     </div>
   </div>
 {{/each}}
